# phoenix-template

./: .gitignore  MILESTONE_SUMMARY.md  README.md  SERVER_TEST_RESULTS.md  package.json  pnpm-lock.yaml  tasks.md
.cursor/rules/: create-prd.mdc  standards.mdc  tdd.mdc  troubleshooting-guide.md
apps/backend/: env.example  pyproject.toml  test_milestone.py  verify_milestone.py
apps/backend/src/backend/: main.py
apps/backend/src/backend/api/: __init__.py  ai.py  clients.py  example.py  health.py  pipeline.py  test_clients.py
apps/backend/src/backend/config/: __init__.py  settings.py
apps/backend/src/backend/database/: schemas.sql
apps/backend/src/backend/models/: __init__.py  client.py  client.test.py  example.py  test_client.py
apps/backend/src/backend/services/: __init__.py  ai_service.py  database_service.py  langchain_service.py  test_langchain_service.py
apps/frontend/src/app/: globals.css  layout.tsx  page.tsx
apps/frontend/src/components/: AIDemo.tsx  ClientIntakeForm.tsx  ContentGenerator.tsx  ExampleForm.tsx  ExampleList.tsx
apps/frontend/src/lib/api/: pipeline.ts
design-system/: 01-core-elements.md
docs/: ARCHITECTURE.md  OG_CONCEPT.md  TECH_STACK.md
snippets/: example.py
tasks/: prd-ai-content-pipeline.md  tasks-prd-ai-content-pipeline.md
