[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Chris Talintyre",email = "chris@polything.co.uk"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pydantic[email] (>=2.5.0,<3.0.0)",
    "langchain (>=0.3.0,<0.4.0)",
    "langchain-openai (>=0.2.0,<0.3.0)",
    "supabase (>=2.4.0,<3.0.0)",
    "httpx (>=0.28.0,<0.29.0)"
]

[tool.poetry]
packages = [{include = "backend", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^0.24.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
